# opencode-mem

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  claude-mem-info.json  doobi-readme.md  fix.patch  fix_entities.py  fix_infinite.py  fix_limit.py  fix_release.py  fix_sanitize.py  flake.nix  gate_evidence.txt  mcp-memory-repos.json  my_server.pid  my_server2.pid  patch.js  patch2.js  patch3.js  patch_infinite.diff  patch_json_utils.diff  patch_memory_bridge.js  patch_queue.js  patch_queue2.js  patch_stats.py  patch_workflow_docs.py  plan.md  server.pid  test  test.rs  test_privacy_title.rs  test_utils  test_utils.rs
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder-loop.local.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: hook.rs  import_insights.rs  mcp.rs  migrate.rs  mod.rs  search.rs  serve.rs
crates/cli/tests/: cli_tests.rs
crates/core/: Cargo.toml
crates/core/src/: app_config.rs  constants.rs  env_config.rs  error.rs  hook.rs  identifiers.rs  infinite_memory.rs  json_utils.rs  knowledge.rs  lib.rs  observation.rs  project_filter.rs  session.rs  storage_trait.rs
crates/core/src/observation/: builder.rs  content_filter.rs  dedup.rs  dedup_tests.rs  input.rs  low_value_filter.rs  merge.rs  mod.rs  observation_type.rs  trivial_tool_call.rs
crates/core/src/observation/content_filter/: mod.rs  tests.rs
crates/core/src/observation/low_value_filter/: tests.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: error.rs  lib.rs
crates/http/: Cargo.toml
crates/http/src/: api_error.rs  blocking.rs  lib.rs  query_types.rs  response_types.rs  routes.rs  viewer.rs
crates/http/src/handlers/: admin.rs  api_docs.rs  branch.rs  breaker_tests.rs  context.rs  cron.rs  infinite.rs  knowledge.rs  mod.rs  observations.rs  queue.rs  queue_processor.rs  search.rs  session_ops.rs  sessions.rs  sessions_api.rs
crates/http/src/handlers/search/: basic.rs  unified.rs
crates/infinite-memory/: Cargo.toml  schema.sql
crates/infinite-memory/migrations/: 001_add_entities.sql  20240221000000_init.sql  20240221000001_add_call_id.sql  20240302000000_fix_ts_date.sql
crates/infinite-memory/src/: backend.rs  compression.rs  event_queries.rs  event_types.rs  lib.rs  migrations.rs  pipeline.rs  pipeline_tests.rs  summary_queries.rs
crates/llm/: Cargo.toml
crates/llm/src/: ai_types.rs  client.rs  compression_prompt.rs  insights.rs  insights_tests.rs  knowledge.rs  knowledge_tests.rs  lib.rs  observation.rs  retry_tests.rs  summary.rs  tests.rs
crates/llm/src/tests/: filtering_tests.rs  mod.rs  utils_tests.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: handlers.rs  lib.rs  tests.rs  tool_schemas.rs  tools.rs
crates/mcp/src/handlers/: dispatch.rs  infinite.rs  knowledge.rs  memory.rs  memory_tests.rs  mod.rs
crates/mcp/src/handlers/memory/: read_handlers.rs  write_handlers.rs
crates/mcp/tests/: degraded_mode.rs
crates/mcp/tests/degraded_mode/: read_tools_tests.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: context.rs  hooks.rs  lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: error.rs  knowledge_service.rs  lib.rs  observation_service.rs  pending_write_queue.rs  queue_service.rs  search_service.rs  session_service.rs
crates/service/src/infinite_memory_service/: compression.rs  mod.rs  pipeline.rs  queries.rs
crates/service/src/observation_service/: adversarial_tests.rs  adversarial_tests2.rs  breaker_tests.rs  compression.rs  dedup_sweep.rs  injection.rs  mod.rs  persistence.rs  privacy_tests.rs  save_memory.rs  side_effects.rs
crates/service/src/search_service/: breaker_tests.rs  embedding_ops.rs  hybrid_ops.rs  mod.rs  query_ops.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 20260314000001_normalize_project_names.sql  20260315000001_knowledge_cleanup.sql
crates/storage/migrations_infinite/: 20260314000000_normalize_project_names.sql
crates/storage/src/: backend.rs  circuit_breaker.rs  error.rs  lib.rs  migrations.rs  pending_queue.rs  pg_migrations.rs  pg_storage.rs  sqlite.rs  sqlite_async.rs  sqlite_monolith.rs  tests.rs  traits.rs  types.rs  vec_init.rs
crates/storage/src/migrations/: column_helpers.rs  mod.rs  v1.rs  v10.rs  v11.rs  v12.rs  v13.rs  v14.rs  v15.rs  v16.rs  v17.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
crates/storage/src/pg_storage/: domain_parsers.rs  embeddings.rs  injections.rs  knowledge.rs  mod.rs  observation_delete.rs  observations.rs  pending.rs  prompts.rs  row_parsers.rs  search.rs  sessions.rs  stats.rs  summaries.rs
crates/storage/src/pg_storage/infinite_memory/: events.rs  migrations.rs
crates/storage/src/pg_storage/infinite_memory/summaries/: mod.rs  queries.rs
crates/storage/src/pg_storage/infinite_memory/summaries/queries/: aggregation.rs  lookup.rs
crates/storage/src/pg_storage/search/: fts.rs  hybrid.rs  semantic.rs  timeline.rs  utils.rs
crates/storage/src/pg_storage/search/hybrid/: v2.rs
crates/storage/src/storage/: backend.rs  embeddings.rs  injections.rs  knowledge.rs  knowledge_mapping.rs  mod.rs  observations.rs  pending.rs  prompts.rs  sessions.rs  stats.rs  summaries.rs
crates/storage/src/storage/search/: mod.rs  semantic_search.rs  text_search.rs  timeline.rs
crates/storage/src/tests/: classification_race_tests.rs  dedup_tests.rs  embedding_text_tests.rs  embeddings_edge_case_tests.rs  find_similar_tests.rs  injection_tests.rs  knowledge_race_tests.rs  knowledge_trigram_tests.rs  merge_tests.rs  mod.rs  observation_tests.rs  queue_tests.rs  search_tests.rs  session_tests.rs  union_dedup_tests.rs
crates/storage/src/traits/: embedding.rs  knowledge.rs  misc.rs  mod.rs  observation.rs  queue.rs  search.rs  session.rs
crates/storage/tests/: knowledge_stress.rs  pg_integration.rs
crates/storage/tests/pg_integration/: embedding_tests.rs  knowledge_tests.rs  main.rs  observation_tests.rs  queue_tests.rs  search_tests.rs  session_tests.rs  stats_tests.rs
docs/: ADR.md
hooks/: README.md
