[package]
name = "opencode-mem-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "opencode-mem"
path = "src/main.rs"

[features]
default = ["sqlite"]
sqlite = ["opencode-mem-storage/sqlite"]
postgres = ["opencode-mem-storage/postgres"]
cuda = ["opencode-mem-embeddings/cuda"]

[dependencies]
opencode-mem-core = { workspace = true }
opencode-mem-storage = { workspace = true, default-features = false }
opencode-mem-llm = { workspace = true }
opencode-mem-http = { workspace = true }
opencode-mem-mcp = { workspace = true }
opencode-mem-infinite = { workspace = true }
opencode-mem-embeddings = { workspace = true }
opencode-mem-service = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
axum = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
uuid = { version = "1", features = ["v4"] }
