[package]
name = "opencode-mem-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
globset = { workspace = true }
