[package]
name = "opencode-mem-embeddings"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
cuda = ["dep:ort"]

[dependencies]
opencode-mem-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fastembed = "5"
ort = { version = "=2.0.0-rc.11", features = ["cuda"], optional = true }
