[package]
name = "opencode-mem-http"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
opencode-mem-storage = { workspace = true }
opencode-mem-llm = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
