[package]
name = "opencode-mem-infinite"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
opencode-mem-llm = { path = "../llm" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
uuid = { version = "1", features = ["v4"] }
