[package]
name = "opencode-mem-infinite"
version.workspace = true
edition.workspace = true
description = "Hierarchical infinite memory with time-based summarization"
keywords = ["memory", "ai", "postgresql", "llm"]
categories = ["database"]
homepage = "https://github.com/Stranmor/opencode-mem"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
opencode-mem-llm = { workspace = true }
opencode-mem-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1", features = ["v4"] }
