[package]
name = "opencode-mem-llm"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
