[package]
name = "opencode-mem-llm"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true, features = ["v4"] }
