[package]
name = "opencode-mem-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
opencode-mem-storage = { workspace = true }
opencode-mem-embeddings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
