[package]
name = "opencode-mem-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
opencode-mem-storage = { workspace = true }
opencode-mem-embeddings = { workspace = true }
opencode-mem-infinite = { workspace = true }
opencode-mem-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
