[package]
name = "opencode-mem-mcp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
opencode-mem-storage = { workspace = true }
opencode-mem-embeddings = { workspace = true }
opencode-mem-search = { workspace = true }
opencode-mem-infinite = { workspace = true }
opencode-mem-service = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
opencode-mem-llm = { workspace = true }
tempfile = { workspace = true }
