[package]
name = "opencode-mem-search"
version.workspace = true
edition.workspace = true
description = "Hybrid search combining FTS, keyword, and semantic search"
keywords = ["search", "fts", "semantic-search", "vector"]
categories = ["text-processing"]
homepage = "https://github.com/Stranmor/opencode-mem"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
opencode-mem-storage = { workspace = true }
opencode-mem-embeddings = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true }
